--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -7,7 +7,7 @@
     <div class="collapse navbar-collapse" id="conteudoNavbarSuportado">
         <ul class="navbar-nav mr-auto d-flex align-items-center">
             <li class="nav-item active">
-                <img src="https://i.imgur.com/C5rS7YG.jpg" alt=" Imagem do user" width="50px" height="50px" class="img-fluid rounded-circle">
+                <img src="https://i.imgur.com/C5rS7YG.jpg?1" alt=" Imagem do user" width="40px" height="80px" class="img-fluid rounded-circle">
             </li>
             <li class="nav-item pl-3">
                 <p class="m-0 font-weight-bold text-white fs-16">Nome do usuário</p>
