crianção dos get- post no front

--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -2,7 +2,7 @@
 
     <div class="row bg-secondary d-flex align-items-center">
         <div class="col-md-6">
-            <div class="row d-flex justify-conttent-center">
+            <div class="row d-flex justify-content-center">
                 <div class="col-md-6 text-white">
                     <h1 class="fs-54">Seja bem vindo(a)!</h1>
                     <h5 class="fs-18">expresse aqui os seus pensamentos e opiniões!</h5>
@@ -10,7 +10,7 @@
                 </div>
             </div>
 
-            <div class="row d-flex justify-conttent-center mt-3 mb-5">
+            <div class="row d-flex justify-content-center mt-3 mb-5">
                 <div class="col-md-6">
                     <button class="btn btn-light mr-2" data-toggle="modal" data-target="#novaPostagem">Nova Postagem</button>
                     <a class="btn btn-outline-light" href="#postagens">Ver Postagens</a>
@@ -19,17 +19,17 @@
 
         </div>
 
-        <div class="col-md-6 d-flex justify-conttent-center">
+        <div class="col-md-6 d-flex justify-content-center">
             <img src="https://i.imgur.com/R6YjV5V.png" alt="imagem de capa" width="500px" height="500px">
 
         </div>
 
     </div>
 </div>
-
+<!-- Nav -->
 <div class="container mb-5 mt-5" id="postagens">
     <nav>
-        <div class="nav nav-tabs d-flex justify-conttent-center " id="nav-tab" role="tablist">
+        <div class="nav nav-tabs d-flex justify-content-center " id="nav-tab" role="tablist">
 
             <a class="nav-item nav-link active text-secondary font-weight-bold" id="nav-todasPostagens-tab" data-toggle="tab" href="#todasPostagens" role="tab"
                 aria-controls="nav-todasPostagens" aria-selected="true">Todas as postagens</a>
@@ -54,10 +54,7 @@
         </div>
     </div>
 </div>
-
-
-
-
+<!--/Nav-->
   
   <!-- Modal -->
   <div class="modal fade" id="novaPostagem" tabindex="-1" role="dialog" aria-labelledby="TituloModalCentralizado" aria-hidden="true">
