--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -72,9 +72,13 @@
                 <div class="card text-center" *ngFor='let item of user.postagem'>
                     <div class="card-body">
                         <h5 class="card-title m-0">{{item.titulo}}</h5>
+                        <small class="text-muted ">Tema: {{item.tema.descricao}}</small>
                         <p class="card-text mt-3">{{item.texto}}</p>
                         <p class="card-text"><small class="text-muted">{{item.date | date: 'dd/MM/yyy'}} às {{item.date
                                 | date:'HH:mm'}}</small></p>
+
+                         <a [routerLink]="['/postagem-edit', item.id]" class="text-info mr-3" href="">Editar</a>
+                         <a [routerLink]="['/postagem-delete', item.id]" class="text-danger" href="">Apagar</a>
 
                     </div>
                 </div>
@@ -84,14 +88,22 @@
 
         <div class="tab-pane fade" id="postagemTema" role="tabpanel" aria-labelledby="nav-postagemTema-tab">
             
-            <div class="card-columns" *ngFor='let tema of listaTemas'>
+            <div class="form-group">
+                <label for="texto">Escolha um tema</label>
+                <select name="tema" id="tema" class="form-control" [(ngModel)]='idTema' (change)='findByIdTema()'>
+                  <option *ngFor='let item of listaTemas' value="{{item.id}}">{{item.descricao}}
+                  </option>
+                </select>
+              </div>
+
+            <div class="card-columns">
                 <div class="card text-center" *ngFor='let item of tema.postagem'>
                     <div class="card-body">
                         <h5 class="card-title m-0">{{item.titulo}}</h5>
                         <p class="card-text mt-3">{{item.texto}}</p>
                         <p class="card-text"><small class="text-muted">{{item.date | date: 'dd/MM/yyy'}} às {{item.date
                                 | date:'HH:mm'}}</small></p>
-                        <p class="card-text"><small class="text-muted">by: {{item.usuario.nome}} </small></p>
+                                <p class="card-text"><small class="text-muted">by: {{item.usuario.nome}} </small></p>
 
                     </div>
                 </div>
@@ -130,7 +142,7 @@
                 <div class="form-group">
                     <label for="tema">Escolha um tema ou <a data-dismiss="modal" routerLink='/tema'> cadastre um
                             novo</a>:</label>
-                    <select name="tema" id="tema" class="form-control" [(ngModel)]='idTema' (change)=findByidTema()>
+                    <select name="tema" id="tema" class="form-control" [(ngModel)]='idTema' (change)=findByIdTema()>
                         <option *ngFor='let item of listaTemas' value="{{item.id}}">{{item.descricao}}</option>
                     </select>
                 </div>
