--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -50,6 +50,15 @@
         <div class="tab-pane fade show active" id="todasPostagens" role="tabpanel"
             aria-labelledby="nav-todasPostagens-tab">
 
+            <div class="row d-flex justify-content-center mt-5 mb-5">
+               <div class="col-md-4">
+                   <div class="form-group">
+                     <input type="text" class="form-control" id="titulo" placeholder="Digite um titulo de postagem para pesquisar"
+                     [(ngModel)]='tituloPost' (keyup)='findByTituloPostagem()'>
+                   </div>
+               </div>
+            </div>
+
             <div class="card-columns">
                 <div class="card text-center" *ngFor='let item of listaPostagens | orderBy : key : reverse'>
                     <div class="card-body">
@@ -88,6 +97,17 @@
 
         <div class="tab-pane fade" id="postagemTema" role="tabpanel" aria-labelledby="nav-postagemTema-tab">
             
+
+            <!-- <div class="row d-flex justify-content-center mt-5 mb-5">
+                <div class="col-md-4">
+                    <div class="form-group">
+                      <input type="text" class="form-control" id="titulo" placeholder="Digite um tema para pesquisar"
+                      [(ngModel)]='nomeTema' (keyup)='findByNomeTema()'>
+                    </div>
+                </div>
+             </div> -->
+            
+
             <div class="form-group">
                 <label for="texto">Escolha um tema</label>
                 <select name="tema" id="tema" class="form-control" [(ngModel)]='idTema' (change)='findByIdTema()'>
@@ -96,7 +116,7 @@
                 </select>
               </div>
 
-            <div class="card-columns">
+            <div class="card-columns" *ngFor='let tema of listaTemas'>
                 <div class="card text-center" *ngFor='let item of tema.postagem | orderBy : key : reverse'>
                     <div class="card-body">
                         <h5 class="card-title m-0">{{item.titulo}}</h5>
